--- a/includes/header.html
+++ b/includes/header.html
@@ -1,16 +1,16 @@
 <header>
   <div class="header-container">
     <h1 class="logo">
-      <a href="/index.html">
-        <img src="../assets/images/logo-preto.png" alt="Website logo featuring VH initials in a modern minimalist design" height="50">
+      <a href="index.html">
+        <img src="./assets/images/logo-preto.png" alt="Website logo featuring VH initials in a modern minimalist design" height="50">
       </a>
     </h1>
 
     <nav class="nav-links">
-      <a href="/index.html">Home</a> /
-      <a href="/public/about.html">About Me</a> /
-      <a href="/public/dev_projects.html">Dev Projects</a> /
-      <a href="/public/design_projects.html">Design Projects</a>
+      <a href="index.html">Home</a> /
+      <a href="public/about.html">About Me</a> /
+      <a href="public/dev_projects.html">Dev Projects</a> /
+      <a href="public/design_projects.html">Design Projects</a>
     </nav>
 
     <button id="toggle-theme" title="Toggle Theme">
